    * atreal.patchfss fix
    * paster quiet option handled correctly
    * distribute instead of setuptools
    * cheetah requirement fix because of ugly zopeskel version pinning
    * add facultystaff to plone3
    * make plone3 paster customizable via configuration files (xml)
    * maintenance on the postgresql instance (8.4.1)
    * let zeo part be there, everytime.

1.3.51
-------

    - postgresql maintenance and doc/UI improvment
    - plone3 refactoring

        - better separation between buildout logic and semantic
        - fix buildout part ordering

    - add --reload option for the pasteinitd profile
    - pgsql 8.4 support
    - zope3 python version upgraded
    - add openldap profile
    - add mysql profile
    - fix on postgresql template for database initialization
    - plone3 fix for offline run
    - add running_user/dbuser distinction in the postgresql profile.
    - move some scripts for global coherence
    - mysqld init script portable
    - db_user is also owner of the created database
    - profils -> instances
    - openldap got better arguements for its wrappers. Also, now it uses
      SIMPLE authentication for connection to the slapd server.
    - add SSL certificate generators
    - fix plone.reload version for compatibility with plone3
    - wrong dependency on pyopenssl fixed and moved inside .extras
    - remove special chars from default database name for postgresql instance
    - add entries for ipv6 connections for postgresql instance
    - Change PATH priorities in .env (minitage come in last, just before
      system PATH
    - make python2.4 at highest priority on plone3 template
    - make direct dependencies at higher priority in minitage.instances.env
    - up to plone 3.3 RELEASE


1.3
----

        - fix failed merge

1.2
-------

    - remove some useless variables on pgsql templates
    - fix django url

1.1
-------

    - PloneArticle fix

1.0
------
