@@ -1,20 +1,22 @@
 $header
 # # gentoo stolen stuff
+# import re
 . $sys/share/gentoo/functions.sh
-
-export OLD_MINITAGE_PATH=\$PATH
-export OLD_MINITAGE_LD_LIBRARY_PATH=\$LD_LIBRARY_PATH
-export OLD_MINITAGE_PS1=\$PS1
-
-MT=${mt}
 INS=${path}
+MT=${mt}
+OLD_MINITAGE_LD_LIBRARY_PATH=\$LD_LIBRARY_PATH
+OLD_MINITAGE_PATH=\$PATH
+OLD_MINITAGE_PS1=\$PS1
+SYS=${path}/sys
+#if $category == 'zope'
+MINITAGE_DATAFS=${path}/var/filestorage/Data.fs
+MINITAGE_ZCONF=${path}/parts/instance/etc/zope.conf
+#end if
 DIRS="#slurp
 #for $var in $dependencies
 $mt/$var.category/$var.name #slurp
 #end for
 "
-
-
 for path in \$DIRS;do
     if [ -d "\$path" ];then
         P=\$path/parts/part/bin:\$P
@@ -46,19 +48,24 @@ fi
 if [ -n \$OLD_MINITAGE_LD_LIBRARY_PATH ];then
     LD=\$LD:\$OLD_MINITAGE_LD_LIBRARY_PATH
 fi
-
-export MT
+PATH=\$P:$sys/share/minitage/
+LD_LIBRARY_PATH=\$LD
 export INS
-export PATH=\$P
-export LD_LIBRARY_PATH=\$LD
+export LD_LIBRARY_PATH
+export MT
+export PATH
 export PROJECT
 #if $category == 'zope'
 export MINITAGE_DATAFS=${path}/var/filestorage/Data.fs
 export MINITAGE_ZCONF=${path}/parts/instance/etc/zope.conf
 #end if
-#set ENVVAR='MINITAGE%s' % ( $project.replace('-', '').replace('_', '').replace('*', ''))
-if [ -z \$$ENVVAR ];then
-   export PS1="(minitage-\$PROJECT) \$PS1"
-   export $ENVVAR=setted
+if test -z \$MINITAGE_ENV;then
+   PS1="(minitage-\$PROJECT) \$PS1"
+   MINITAGE_ENV=$ENVVAR
+   export PS1
+   export MINITAGE_ENV
 fi
-## vim: set ft=cheetah:
+deactivate() {
+    . $sys/share/minitage/minitage.deactivate
+}
+# vim: set ft=sh:
