@@ -17,6 +17,7 @@ CHANGES
     * make plone3 paster customizable via configuration files (xml)
     * maintenance on the postgresql instance (8.4.1)
     * let zeo part be there, everytime.
+    * fix "instance.env" deactivate function
 
 1.3.51
 -------
